[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/Ui.gd" type="Script" id=1]
[ext_resource path="res://font/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Audio/Random.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[node name="Ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScoreLable" type="Label" parent="."]
margin_bottom = 14.0
rect_scale = Vector2( 3, 3 )
text = "Score:"

[node name="UseLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 436.0
margin_top = 14.0
margin_right = 475.0
margin_bottom = 28.0
rect_scale = Vector2( 3, 3 )
text = "press 'e'"

[node name="KeyLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 819.0
margin_top = 1.0
margin_right = -89.0
margin_bottom = -531.0
custom_fonts/font = SubResource( 1 )
text = "key:"

[node name="Jump_Timer" type="Timer" parent="."]
one_shot = true

[node name="Jump_Label" type="Label" parent="."]
margin_left = 263.0
margin_top = 14.0
margin_right = 416.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "Jump_Time:"

[node name="speed_label" type="Label" parent="."]
margin_left = 543.0
margin_top = 14.0
margin_right = 705.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "Speed_Time:"

[node name="speed_timer" type="Timer" parent="."]

[node name="time_end" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="Jump_Timer" to="." method="_on_Jump_Timer_timeout"]
[connection signal="timeout" from="speed_timer" to="." method="_on_speed_timer_timeout"]
